--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="description" content="Nina Carducci">
+	<meta name="description" content="Site vitrine Nina Carducci proposant ses services de photographie">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.min.js"></script>
 	<script src="./assets/scripts.min.js"></script>
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Title Here"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="http://www.example.com/"/>
+	<meta property="og:image" content="http://example.com/image.jpg"/>
+	<meta property="og:description" content="Description Here"/>
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@publisher_handle">
+	<meta name="twitter:title" content="Page Title">
+	<meta name="twitter:description" content="Page description less than 200 characters">
+	<meta name="twitter:creator" content="@author_handle">
+	<meta name="twitter:image" content="http://www.example.com/image.jpg">
 </head>
 <body>
 	<div class="top-header">
