--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="description" content="Site vitrine Nina Carducci proposant ses services de photographie">
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.min.js"></script>
-	<script src="./assets/scripts.min.js"></script>
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Title Here"/>
 	<meta property="og:type" content="website"/>
@@ -31,7 +27,7 @@
 <body>
 	<div class="top-header">
 		<h1 class="name">Nina Carducci</h1>
-		<div class="nav">   
+		<div class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
 				<li><a href="#gallery">Galerie</a></li>
@@ -169,5 +165,9 @@
 			</div>
 		</div>
 	</div>
+	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script defer src="./assets/maugallery.min.js"></script>
+	<script defer src="./assets/scripts.min.js"></script>
 	</body>
 	</html>
