--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 			</div>
 			<div class="carousel-inner">
-				<div class="carousel-item active">
+				<div class="carousel-item active size">
 					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="slider 1">
 				</div>
-				<div class="carousel-item">
+				<div class="carousel-item size">
 					<img src="./assets/images/slider/nicholas-green-npz8akkumdi-unsplash.webp" class="d-block w-100" alt="slider 2">
 				</div>
-				<div class="carousel-item">
+				<div class="carousel-item size">
 					<img src="./assets/images/slider/edward-cisneros-3-h6-1npdgw-unsplash.webp" class="d-block w-100" alt="slider 3">
 				</div>
 			</div>
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	<div id="about">
-		<div class="picture left">
+		<div class="picture left size">
 			<img src="./assets/images/nina.webp" alt="Portrait Nina">
 		</div>
 		<div id="about-me">
@@ -164,7 +164,7 @@
 					<input type="submit" value="Envoyer"/>
 				</form>
 			</div>
-			<div class="picture right">
+			<div class="picture right size">
 				<img src="./assets/images/camera.webp" alt="camera">
 			</div>
 		</div>
