--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Site vitrine Nina Carducci proposant ses services de photographie">
 	<!-- Open Graph data -->
-	<meta property="og:title" content="Title Here"/>
-	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="http://www.example.com/"/>
-	<meta property="og:image" content="http://example.com/image.jpg"/>
-	<meta property="og:description" content="Description Here"/>
+	<meta property="og:title" content="Nina Carducci site vitrine"/>
+	<meta property="og:type" content="Nina Carducci"/>
+	<meta property="og:url" content="https://www.instagram.com/ninacarducci.photo/?hl=fr"/>
+	<meta property="og:image" content="https://www.google.com/search?q=nina+carducci&hl=fr&authuser=0&tbm=isch&sxsrf=AB5stBgGRondfZCX9YZYZCnUvwPO4pGLJw%3A1691494916165&source=hp&biw=1745&bih=868&ei=BCrSZNeqB_GLkdUP4pq3iAQ&iflsig=AD69kcEAAAAAZNI4FGWu0exIMcpxfHOUxpJS8CGK5RJj&ved=0ahUKEwjXvPXM_cyAAxXxRaQEHWLNDUEQ4dUDCAc&uact=5&oq=nina+carducci&gs_lp=EgNpbWciDW5pbmEgY2FyZHVjY2kyBxAAGBgYgAQyBxAAGBgYgARI5x1QAFj6G3AAeACQAQCYAWygAbcGqgEEMTIuMbgBA8gBAPgBAYoCC2d3cy13aXotaW1nwgIEECMYJ8ICCBAAGIAEGLEDwgIFEAAYgATCAgsQABiABBixAxiDAcICBBAAGB7CAgcQABgTGIAEwgIIEAAYCBgeGBM&sclient=img#imgrc=dMYyX_DME06kGM"/>
+	<meta property="og:description" content="Site vitrine de Nina Carducci photographe professionnel proposant ses services de photographie."/>
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@publisher_handle">
@@ -50,7 +50,7 @@
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 			</div>
 			<div class="carousel-inner">
-				<div class="carousel-item active size">
+				<div class="size carousel-item active ">
 					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="slider 1">
 				</div>
 				<div class="carousel-item size">
