--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<li><a href="#gallery">Galerie</a></li>
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram2.png" alt="Logo instagram"></a></li>
+				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt="Logo instagram"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="slider 1">
 				</div>
 				<div class="carousel-item size">
-					<img src="./assets/images/slider/nicholas-green-npz8akkumdi-unsplash.webp" class="d-block w-100" alt="slider 2">
+					<img src="./assets/images/slider/nichola.webp" class="d-block w-100" alt="slider 2">
 				</div>
 				<div class="carousel-item size">
 					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="slider 3">
