--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 			</div>
 			<div class="carousel-inner">
-				<div class="size carousel-item active ">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="slider 1">
+				<div class="carousel-item active">
+					<img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-compressed.webp 1500w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp 1000w" width="1500" height="100%" src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-compressed.webp" alt="photo d'un homme en costard traversant la route">
 				</div>
-				<div class="carousel-item size">
-					<img src="./assets/images/slider/nichola.webp" class="d-block w-100" alt="slider 2">
+				<div class="carousel-item">
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-compressed.webp" alt="photo du public pendant un concert">
 				</div>
-				<div class="carousel-item size">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="slider 3">
+				<div class="carousel-item">
+					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" alt="photo de mariés qui s'embrassent">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -72,7 +72,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left size">
-			<img src="./assets/images/nina-compressed.webp" alt="Portrait Nina">
+			<img src="./assets/images/nina-compressed.webp" width="374" height="373" alt="photo portrait Nina Carducci">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -85,15 +85,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-compressed2.webp" alt="Concert"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-compressed.webp" alt="Entreprises"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Entreprises"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-compressed.webp" alt="Mariages"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-compressed.webp" alt="Portrait"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-compressed.webp" alt="Mariages"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait"/>
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-compressed2.webp" alt="Concert"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Entreprises"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-compressed2.webp" alt="photo d'une scene avec une lumiere rouge"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-compressed.webp" alt="photo d'un homme en costard qui croise les bras"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="photo d'une femme au bureau qui rigole"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-compressed.webp" alt="photo de mains de mariés se touchant le bout des doigts"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-compressed.webp" alt="photo de portrait d'un hommme noir qui ferme les yeux"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-compressed.webp" alt="deux mariés se tenant la main devant un palmier"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="photo d'une fille à lunettes devant une grille"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-compressed2.webp" alt="un chanteur sur scène montrant quatre doigts avec une main"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="photo d'une femme devant son PC qui rigole"/>
 			</div>
 		</div>
 		<div class="quote">
@@ -165,7 +165,7 @@
 				</form>
 			</div>
 			<div class="picture right size">
-				<img src="./assets/images/camera-compressed.webp" alt="camera">
+				<img src="./assets/images/camera-compressed.webp" width="374" height="373" alt="photo d'un appareil photo">
 			</div>
 		</div>
 	</div>
