--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<script async src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script async src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/maugallery.min.js"></script>
+	<script src="./assets/scripts.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	
 	<meta charset="UTF-8">
 	<meta name="description" content="Site vitrine Nina Carducci proposant ses services de photographie">
 	<!-- Open Graph data -->
@@ -17,13 +20,17 @@
 	<meta property="og:url" content="https://www.instagram.com/ninacarducci.photo/?hl=fr"/>
 	<meta property="og:image" content="https://www.google.com/search?q=nina+carducci&hl=fr&authuser=0&tbm=isch&sxsrf=AB5stBgGRondfZCX9YZYZCnUvwPO4pGLJw%3A1691494916165&source=hp&biw=1745&bih=868&ei=BCrSZNeqB_GLkdUP4pq3iAQ&iflsig=AD69kcEAAAAAZNI4FGWu0exIMcpxfHOUxpJS8CGK5RJj&ved=0ahUKEwjXvPXM_cyAAxXxRaQEHWLNDUEQ4dUDCAc&uact=5&oq=nina+carducci&gs_lp=EgNpbWciDW5pbmEgY2FyZHVjY2kyBxAAGBgYgAQyBxAAGBgYgARI5x1QAFj6G3AAeACQAQCYAWygAbcGqgEEMTIuMbgBA8gBAPgBAYoCC2d3cy13aXotaW1nwgIEECMYJ8ICCBAAGIAEGLEDwgIFEAAYgATCAgsQABiABBixAxiDAcICBBAAGB7CAgcQABgTGIAEwgIIEAAYCBgeGBM&sclient=img#imgrc=dMYyX_DME06kGM"/>
 	<meta property="og:description" content="Site vitrine de Nina Carducci photographe professionnel proposant ses services de photographie."/>
-	<!-- Twitter Card data -->
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="@publisher_handle">
-	<meta name="twitter:title" content="Page Title">
-	<meta name="twitter:description" content="Page description less than 200 characters">
-	<meta name="twitter:creator" content="@author_handle">
-	<meta name="twitter:image" content="http://www.example.com/image.jpg">
+	<!-- Schema.org meta for Google+ -->
+	<meta itemprop="name" content="Photographe professionnel Nina Carducci" />
+	<meta itemprop="description" content="Vous voulez saisir vos meilleurs instants de la vie ? Figez ces instants grâce à mes compétences de photographe professionnel" />
+	<meta itemprop="image" content="https://mathieudcp.github.io/nina/assets/images/nina-compressed.webp" />
+	<!-- Twitter summary card with large image must be at least 280x150px -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title"
+		content="Photographe professionnel Nina Carducci" />
+	<meta name="twitter:description"
+		content="Vous voulez saisir vos meilleurs instants de la vie ? Figez ces instants grâce à mes compétences de photographe professionnel" />
+	<meta name="twitter:image" content="https://mathieudcp.github.io/nina/assets/images/nina-compressed.webp" />
 </head>
 <body>
 	<div class="top-header">
@@ -166,9 +173,6 @@
 			</div>
 		</div>
 	</div>
-	<script async src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-	<script async src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.min.js"></script>
-	<script src="./assets/scripts.min.js"></script>
+
 	</body>
 	</html>
