--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<script async src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script async src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.min.js"></script>
-	<script src="./assets/scripts.min.js"></script>
+	
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="description" content="Site vitrine Nina Carducci proposant ses services de photographie">
@@ -74,8 +73,8 @@
 			</button>
 		</div>
 	</div>
-	<div id="about">
-		<div class="picture left size">
+	<section id="about">
+		<div class="picture left">
 			<img src="./assets/images/nina-compressed.webp" width="374" height="373" alt="photo portrait Nina Carducci">
 		</div>
 		<div id="about-me">
@@ -84,8 +83,8 @@
 			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 		</div>
-	</div>
-	<div id="gallery">
+	</section>
+	<section id="gallery">
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
@@ -108,7 +107,7 @@
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</div>
-	</div>
+	</section>
 	<div id="services">
 		<h2 class="title">Mes services</h2>
 		<div class="container">
@@ -173,6 +172,7 @@
 			</div>
 		</div>
 	</div>
-
-	</body>
-	</html>
+	<script src="./assets/maugallery.min.js"></script>
+	<script src="./assets/scripts.min.js"></script>
+</body>
+</html>
