--- a/index.html
+++ b/index.html
@@ -173,5 +173,26 @@
 	<script async src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.min.js"></script>
 	<script src="./assets/scripts.min.js"></script>
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci",
+		  "image": "https://github.com/MaximeGodfroy/Projet5_Debuggez_et_optimisez_un_site_de_photographe/raw/referencement_local2/assets/images/nina-compressed.webp",
+		  "address": {
+			"@type": "PostalAddress",
+			"addressLocality": "Bordeaux",
+			"addressRegion": "Gironde",
+			"adressCountry": "France",
+			"postalCode": "33200",
+			"streetAddress": "68 avenue Alsace-Lorraine"
+		  },
+		  "description": "Photographe professionnel",
+		  "priceRange": "50-400 €",
+		  "openingHours": "Mo-Fr 10:00-19:00",
+		  "telephone": "05 56 67 78 89",
+		  "url": "https://maximegodfroy.github.io/Projet5_Debuggez_et_optimisez_un_site_de_photographe/"
+		}
+		</script>
 </body>
 </html>
