--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="description" content="Site vitrine Nina Carducci proposant ses services de photographie">
+	<meta name="description"
+		content="Nina Carducci, photographe professionnel située à Bordeaux, disponible du lundi au vendredi entre 10h et 19h, au 05 56 67 78 89. Pour tous vos événements, entreprises ou mariages." />
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Nina Carducci">
+	<meta property="og:url" content="https://MathieuDcp.github.io/nina/">
+	<meta property="og:image" content="https://github.com/MathieuDcp/nina/blob/main/assets/images/nina-compressed.webp">
+	<meta property="og:description"
+		content="Nina Carducci, photographe professionnel située à Bordeaux, disponible du lundi au vendredi entre 10h et 19h, au 05 56 67 78 89. Pour tous vos événements, entreprises ou mariages.">
+
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Nina Carducci site vitrine"/>
 	<meta property="og:type" content="Nina Carducci"/>
@@ -22,10 +30,8 @@
 	<meta itemprop="image" content="https://mathieudcp.github.io/nina/assets/images/nina-compressed.webp" />
 	<!-- Twitter summary card with large image must be at least 280x150px -->
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title"
-		content="Photographe professionnel Nina Carducci" />
-	<meta name="twitter:description"
-		content="Vous voulez saisir vos meilleurs instants de la vie ? Figez ces instants grâce à mes compétences de photographe professionnel" />
+	<meta name="twitter:title" content="Photographe professionnel Nina Carducci" />
+	<meta name="twitter:description" content="Vous voulez saisir vos meilleurs instants de la vie ? Figez ces instants grâce à mes compétences de photographe professionnel" />
 	<meta name="twitter:image" content="https://mathieudcp.github.io/nina/assets/images/nina-compressed.webp" />
 </head>
 <body>
@@ -169,6 +175,28 @@
 			</div>
 		</div>
 	</div>
+	<script type='application/ld+json'>
+		{
+		  "@context": "http://www.schema.org",
+		  "@type": "ProfessionalService",
+		  "name": "Nina Carducci",
+		  "url": "https://MathieuDcp.github.io/nina/",
+		  "image": "https://github.com/MathieuDcp/nina/blob/main/assets/images/nina-compressed.webp",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeau",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		  },
+		  "openingHours": "Mo, Tu, We, Th, Fr 10:00-19:00",
+		  "contactPoint": {
+			"@type": "ContactPoint",
+			"contactType": "ninacarducci@gmail.com",
+			"telephone": "+33556677889"
+		  }
+		}
+		 </script>
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.min.js"></script>
